--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,14 @@
       <section class="section section-3">
         <h2>Contact me</h2>
       </section>
+      <section class="section section_team">
+        <h2>Team</h2>
+      </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
+    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
     <script type="module" src="./script.js"></script>
   </body>
 </html>
