--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <canvas class="webgl"></canvas> -->
-    <main class="main">
+    <main class="page_main">
       <section class="section section-1">
         <h1 class="title">My Portfolio</h1>
       </section>
@@ -18,9 +18,7 @@
       <section class="section section-3">
         <h2>Contact me</h2>
       </section>
-      <section class="section section_team">
-        <h2>Team</h2>
-      </section>
+      <section class="section section_team" style="background: red"></section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
